--- a/app/src/main/res/layout/activity_choose_funding_type.xml
+++ b/app/src/main/res/layout/activity_choose_funding_type.xml
@@ -8,30 +8,57 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/imageView"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            app:srcCompat="@drawable/chevron_left_outline_24"
-            android:contentDescription="back button" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:padding="10dp">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="start"
+                    android:contentDescription="back button"
+                    app:srcCompat="@drawable/chevron_left_outline_24" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:fontFamily="@font/roboto_bold"
+                    android:text="Тип сбора"
+                    android:textColor="#000000"
+                    android:textSize="24sp" />
+
+            </RelativeLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:background="#c0c0c0" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:orientation="vertical"
-            android:padding="5dp">
+            android:dividerPadding="5dp">
 
             <Button
                 android:id="@+id/target_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Целевой сбор" />
+                android:text="Целевой сбор"
+                android:onClick="onCreateGoalFundClick"/>
 
             <Button
                 android:id="@+id/regular_button"
